--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,41 +7,59 @@ on:
     branches: ["main"]
 
 jobs:
-  build-and-push:
+  build-and-test:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GHCR
-        if: secrets.CR_PAT != ''
-        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
+      
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          tags: |
-            gdpr-scorer:test
-            ghcr.io/${{ github.repository_owner }}/gdpr-scorer:latest
+          tags: gdpr-scorer:test
           load: true
-          push: false  # Will push manually below if secret exists
-
+          push: false
+      
       - name: Test container starts
         run: |
-          docker run --name gdpr-test -d gdpr-scorer:test
-          sleep 5
+          docker run --name gdpr-test -d -p 8501:8501 gdpr-scorer:test
+          sleep 10
           docker ps -a
+          docker logs gdpr-test
           docker stop gdpr-test
           docker rm gdpr-test
 
-      - name: Push to GHCR
-        if: secrets.CR_PAT != ''
-        run: |
-          docker push ghcr.io/${{ github.repository_owner }}/gdpr-scorer:latest
-
+  push-to-registry:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/gdpr-scorer:latest
+            ghcr.io/${{ github.repository_owner }}/gdpr-scorer:${{ github.sha }}
